# simscript-physics

./: .gitignore  Cargo.toml  README.md
approx_derive/: Cargo.toml
approx_derive/src/: lib.rs
derives/: Cargo.toml
derives/src/: lib.rs
src/: builder.rs  lib.rs  linear_trait.rs
src/inertia_mass/: intertia.rs  mass.rs  mod.rs
src/mass/: mod.rs
src/moments/: force.rs  mod.rs  torque.rs
src/momentum/: angular_momentum.rs  linear_momentum.rs  mod.rs
src/panels/: mod.rs
src/position/: angular_movement.rs  linear_movement.rs  mod.rs
src/transform/: mod.rs  rotation.rs  translation.rs
src/velocity/: angular_velocity.rs  linear_velocity.rs  mod.rs
